--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -581,8 +581,14 @@ video {
 .divide-featured > :not([hidden]) ~ :not([hidden]) {
     border-color: var(--featured-color);
 }
+.self-start {
+    align-self: flex-start;
+}
 .self-end {
     align-self: flex-end;
+}
+.self-center {
+    align-self: center;
 }
 .overflow-x-auto {
     overflow-x: auto;
@@ -741,10 +747,6 @@ video {
     font-size: 1.25rem;
     line-height: 1.75rem;
 }
-.text-xs {
-    font-size: 0.75rem;
-    line-height: 1rem;
-}
 .font-semibold {
     font-weight: 600;
 }
@@ -839,14 +841,8 @@ footer a:hover {
     .sm\:left-\[30vw\] {
         left: 30vw;
     }
-    .sm\:col-span-1 {
-        grid-column: span 1 / span 1;
-    }
     .sm\:w-\[70vw\] {
         width: 70vw;
-    }
-    .sm\:grid-cols-3 {
-        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
     .sm\:p-16 {
         padding: 4rem;
@@ -861,11 +857,14 @@ footer a:hover {
     .md\:order-none {
         order: 0;
     }
-    .md\:col-span-2 {
-        grid-column: span 2 / span 2;
+    .md\:order-first {
+        order: -9999;
     }
     .md\:col-span-1 {
         grid-column: span 1 / span 1;
+    }
+    .md\:col-span-2 {
+        grid-column: span 2 / span 2;
     }
     .md\:row-span-2 {
         grid-row: span 2 / span 2;
