Added 'hero' to the banner section to better differentiate what banner exactly
Doing this in case we add another 'banner' elsewhere - better wording for client usage

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <header class="relative min-h-screen flex flex-col">
-  <img class="absolute object-cover h-full inset-y-0 right-0 {% if page.banner.header-style == 'full width' %} inset-x-0 w-full {% elsif page.banner.header-style == 'two thirds' %} left-[30vw] w-[70vw] {% endif %}" src="{{page.banner.banner-image}}" alt="{{page.banner.banner-image-alt}}" style="object-position: {{page.banner.banner-horizontal-focal-point}}  {{page.banner.banner-vertical-focal-point}}">
+  <img class="absolute object-cover h-full inset-y-0 right-0 {% if page.hero-banner.header-style == 'full width' %} inset-x-0 w-full {% elsif page.hero-banner.header-style == 'two thirds' %} left-[30vw] w-[70vw] {% endif %}" src="{{page.hero-banner.banner-image}}" alt="{{page.hero-banner.banner-image-alt}}" style="object-position: {{page.hero-banner.banner-horizontal-focal-point}}  {{page.hero-banner.banner-vertical-focal-point}}">
   <!-- Nav Bar -->
   <nav class="relative flex flex-col md:flex-row justify-between p-4 px-8">
     <a href="/index.html" class="text-xl featured-text">The Yoga Studio</a>
