forgot to add 'hero' to the text elements within the hero banner

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
   </nav>
   <div class="relative grow flex flex-col justify-center p-24">
     <hr class="border-featured -ml-24 w-80">
-    <p class="pt-10 uppercase accent-text tracking-widest">{{page.banner.overline}}</p>
-    <h1 class="text-7xl featured-text">{{page.banner.main-heading}}</h1>
+    <p class="pt-10 uppercase accent-text tracking-widest">{{page.hero-banner.overline}}</p>
+    <h1 class="text-7xl featured-text">{{page.hero-banner.main-heading}}</h1>
   </div>
 </header>
