--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -1,4 +1,4 @@
-<section class="border-y border-featured">
+<section class="border-y border-featured py-28">
   
   {% if block.section-heading %}
 
