Trying to fix the button spacing on the text and image grid
This is a bit funky because I could make a loop to add an if statement to ignore the content if there's not text BUT then in cloud cannon it's like an extra step to add paragraph text - so I'll leave it for now and if the text is empty in the second paragraph, there's just a bit more space between the text and button (better I think than being too squished)

--- a/_includes/text-and-image-grid.html
+++ b/_includes/text-and-image-grid.html
@@ -14,7 +14,7 @@
     </div>
     <p class="pb-3">{{block.text-1}}</p>
     <p class="pb-3">{{block.text-2}}</p>
-    <div class="pt-6">
+    <div class="pt-5 pb-8 sm:pb-0">
       <button class="button">{{block.button-text}}</button>
     </div>
   </div>
