--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -725,6 +725,9 @@ video {
 .pt-6 {
     padding-top: 1.5rem;
 }
+.pt-5 {
+    padding-top: 1.25rem;
+}
 .text-center {
     text-align: center;
 }
@@ -858,6 +861,9 @@ footer a:hover {
     .sm\:px-16 {
         padding-left: 4rem;
         padding-right: 4rem;
+    }
+    .sm\:pb-0 {
+        padding-bottom: 0px;
     }
 }
 
