made sure the color was 'base-color' and not just 'base'

--- a/_includes/contact-form.html
+++ b/_includes/contact-form.html
@@ -11,17 +11,17 @@
       <!-- Name -->
       <div class="py-6 md:pt-0">
       <!-- COMMENTING OUT THE LABEL <label class="uppercase font-semibold border-featured border-b block" for="_name"> Name </label> -->
-      <input class="placeholder:uppercase font-semibold placeholder:text-featured border-featured border-b block w-full py-2 outline-none bg-base focus:bg-accent" type="text" name="_name" id="_name" placeholder="Name" />  
+      <input class="placeholder:uppercase font-semibold placeholder:text-featured border-featured border-b block w-full py-2 outline-none bg-base-color focus:bg-accent" type="text" name="_name" id="_name" placeholder="Name" />  
       </div>
       <!-- Email -->
       <div class="pb-6">
       <!-- COMMENTING OUT THE LABEL <label class="uppercase font-semibold border-featured border-b block" for="_replyto"> Email </label> -->
-      <input class="placeholder:uppercase font-semibold placeholder:text-featured border-featured border-b block w-full py-2 outline-none bg-base focus:bg-accent" type="email" name="_replyto" id="_replyto" placeholder="Email" />
+      <input class="placeholder:uppercase font-semibold placeholder:text-featured border-featured border-b block w-full py-2 outline-none bg-base-color focus:bg-accent" type="email" name="_replyto" id="_replyto" placeholder="Email" />
       </div>
       <!-- Message -->
       <div class="pb-6">
       <label class="uppercase font-semibold block" for="message">Message</label>
-      <textarea class="p-1 block w-full border-featured border outline-none bg-base focus:bg-accent" name="message" id="message" placeholder=""></textarea>
+      <textarea class="p-1 block w-full border-featured border outline-none bg-base-color focus:bg-accent" name="message" id="message" placeholder=""></textarea>
       </div>
       <!-- Button -->
       <div class="text-center">
