--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
          }
    </style>
 
-<body class="bg-base text-featured">
+<body class="bg-base-color text-featured">
 
  <!-- Header -->
  {% include header.html %}
