updating footer text color
for some reason wasn't showing properly live

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <!-- Footer -->
 <footer class="bg-featured text-base-color uppercase px-8 sm:px-16">
   <!-- order shifted on the newsletter to bring it above on mobile, but then needed to make the flex only on md, which meant we needed to add grid to the default/small size -->
-  <div class="border-black py-16 grid gap-12 justify-center md:flex md:justify-between">
+  <div class="border-black py-16 grid gap-12 justify-center md:flex md:justify-between text-base-color">
     <div class="flex gap-16">
       <div class="">
         <p class="featured-text pb-4">Group name</p>
@@ -38,6 +38,6 @@
 </footer>
 
 <div class="bg-featured text-base-color">
-  <hr class="relative border-base-color border-t-1">
-  <p class="px-8 sm:px-16 py-4 uppercase text-sm tracking-wide border-base-color border-t-1">Terms of use</p>
+  <hr class="relative text-base-color border-base-color border-t-1">
+  <p class="px-8 sm:px-16 py-4 text-base-color uppercase text-sm tracking-wide border-base-color border-t-1">Terms of use</p>
 </div>
