adding the text-base-color because it's still not working

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,21 +3,21 @@
   <!-- order shifted on the newsletter to bring it above on mobile, but then needed to make the flex only on md, which meant we needed to add grid to the default/small size -->
   <div class="border-black py-16 grid gap-12 justify-center md:flex md:justify-between text-base-color">
     <div class="flex gap-16">
-      <div class="">
+      <div class="text-base-color">
         <p class="featured-text pb-4">Group name</p>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 1</a>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 2</a>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 3</a>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 4</a>
       </div>
-      <div class="">
+      <div class="text-base-color">
         <p class="featured-text pb-4">Link groups</p>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 1</a>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 2</a>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 3</a>
         <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 4</a>
       </div>
-      <div class="">
+      <div class="text-base-color">
           <p class="featured-text pb-4">Another group</p>
           <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 1</a>
           <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 2</a>
@@ -25,8 +25,8 @@
           <a href="#" class="block p-1 uppercase text-sm tracking-wide">Link 4</a>
         </div>
     </div>
-    <form class="flex flex-col order-first md:order-none">
-      <p class="featured-text uppercase text-right">Subscribe to our newsletter</p>
+    <form class="flex flex-col order-first md:order-none text-base-color">
+      <p class="featured-text  uppercase text-right">Subscribe to our newsletter</p>
       <label class="sr-only" for="_replyto"> Email </label>
       <input class="focus:outline-none pl-2 pr-10 my-4 py-1 border-base-color border bg-inherit" type="email" name="_replyto" id="_replyto" placeholder=""/>
       <div class="text-right">
